FEAT : Setup PostgresDB , moved from Express -> Fastify

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -174,3 +174,9 @@
     @apply bg-background text-foreground;
   }
 }
+.avalanche-border{
+  border-color: var(--avalanche-border);
+}
+.avalanche-background{
+  background-color: var(--avalanche-dark-card);
+}
